--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /******************************
 
 Snooker Scorer App: 
-Last Update: 23/06/2025 - 16:45
+Last Update: 24/06/2025 - 15:57
 ******************************/
 * {
   padding: 0;
@@ -35,7 +35,7 @@ body header p, body header h1 {
 body header h1 {
   font-size: 39px;
 }
-@media (max-width: 560px) {
+@media (max-width: 680px) {
   body header h1 {
     font-size: 7vw;
   }
@@ -63,7 +63,7 @@ body main.interface-container {
     margin: 0 auto;
   }
 }
-@media (max-width: 560px) {
+@media (max-width: 680px) {
   body main.interface-container {
     width: 90%;
   }
@@ -80,14 +80,14 @@ body main.interface-container .player---points--status {
     font-size: 3.4vw;
   }
 }
-@media (max-width: 560px) {
+@media (max-width: 680px) {
   body main.interface-container .player---points--status {
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
   }
 }
-@media (max-width: 520px) {
+@media (max-width: 560px) {
   body main.interface-container .player---points--status {
     font-size: 5vw;
     margin: 4pt auto;
@@ -100,7 +100,7 @@ body main.interface-container .active--player {
   text-align: center;
   vertical-align: middle;
 }
-@media (max-width: 560px) {
+@media (max-width: 680px) {
   body main.interface-container .active--player {
     margin: 0pt auto;
     font-size: 12px;
@@ -123,7 +123,7 @@ body main.interface-container .active--player #player_number {
   box-shadow: black 2px 2px 4px 0px;
   vertical-align: top;
 }
-@media (max-width: 560px) {
+@media (max-width: 680px) {
   body main.interface-container .active--player #player_number {
     font-size: 6vw;
   }
@@ -134,7 +134,7 @@ body main.interface-container .points--remaining {
   margin: 0 auto;
   width: 100%;
 }
-@media (max-width: 560px) {
+@media (max-width: 680px) {
   body main.interface-container .points--remaining {
     margin: 10pt auto;
     font-size: 20px;
@@ -199,10 +199,17 @@ body main.interface-container .player---section .player---potting .player---pot-
   border-radius: 50%;
   height: 28px;
   width: 28px;
-  margin: 10px;
+  margin: 10px 5px;
   display: inline-block;
   transition: box-shadow 0.3s ease-in-out;
   cursor: pointer;
+}
+@media (max-width: 560px) {
+  body main.interface-container .player---section .player---potting .player---pot--score {
+    width: 20px;
+    height: 20px;
+    margin: 4px;
+  }
 }
 body main.interface-container .player---section .player---potting .player---pot--score:hover {
   box-shadow: wheat 0 0 2px 2px;
@@ -217,6 +224,12 @@ body main.interface-container .player---section .player---potting .player---pot-
   font-weight: bold;
   letter-spacing: 0px;
   font-size: 15px;
+}
+@media (max-width: 560px) {
+  body main.interface-container .player---section .player---potting .player---pot--score p {
+    font-size: 12px;
+    top: 4px;
+  }
 }
 body main.interface-container .player---section .player---potting .player---pot--red {
   background: #cd0000;
@@ -295,6 +308,13 @@ body main.interface-container .player---section .player---potting a#apply_tally-
   visibility: hidden;
   /* visibility: visible; */
 }
+@media (max-width: 560px) {
+  body main.interface-container .player---section .player---potting a#apply_tally---red--p1,
+  body main.interface-container .player---section .player---potting a#apply_tally---red--p2 {
+    font-size: 9px;
+    margin: 0 5px;
+  }
+}
 body main.interface-container .player---section .breaks---and--snookers {
   display: inline-block;
   margin: 0px 0px 10px 0px;
@@ -313,7 +333,7 @@ body main.interface-container .player---section .breaks---and--snookers {
     text-align: center;
   }
 }
-@media (max-width: 560px) {
+@media (max-width: 680px) {
   body main.interface-container .player---section .breaks---and--snookers {
     font-size: 12px;
   }
@@ -324,7 +344,7 @@ body main.interface-container .player---section .breaks---and--snookers {
     text-align: center;
   }
 }
-@media (max-width: 560px) {
+@media (max-width: 680px) {
   body main.interface-container .player---section .breaks---and--snookers {
     display: inline-block;
     font-size: 12px;
@@ -337,7 +357,7 @@ body main.interface-container .player---section .breaks---and--snookers {
 body main.interface-container .player---section .breaks---and--snookers div {
   background: none;
 }
-@media (max-width: 560px) {
+@media (max-width: 680px) {
   body main.interface-container .player---section .breaks---and--snookers div {
     display: inline-block;
     font-size: 12px;
@@ -382,7 +402,7 @@ body main.interface-container .player---potting .player---pot--miss {
   border: solid #647a63 1px;
   border-radius: 6px;
   background: #270202;
-  font-size: 13px;
+  /* font-size: 13px; */
   margin: 4px;
   padding: 0 6px;
   /* width: 59px; */
@@ -393,14 +413,14 @@ body main.interface-container .player---potting .player---pot--miss {
 body main.interface-container .player---potting .player---pot--miss:hover {
   background: #660505;
 }
-@media (max-width: 560px) {
+@media (max-width: 680px) {
   body main.interface-container .player---potting .player---pot--miss {
     /* height: 20px; */
     /* height: auto; */
     width: 20px;
   }
 }
-@media (max-width: 560px) {
+@media (max-width: 680px) {
   body main.interface-container .player---potting .player---pot--miss {
     /* padding: 5px; */
     width: auto;
@@ -415,6 +435,11 @@ body main.interface-container .player---potting .player---pot--miss .pot---tally
   font-size: 13px;
   position: relative;
   top: 7px;
+}
+@media (max-width: 560px) {
+  body main.interface-container .player---potting .player---pot--miss .pot---tally {
+    font-size: 10px;
+  }
 }
 body main.interface-container .player---potting .player---pot--miss #tally---potted--black-p1,
 body main.interface-container .player---potting .player---pot--miss #tally---potted--pink-p1,
@@ -440,7 +465,7 @@ body main.interface-container .player---potting .player---pot--score {
   display: inline-block;
   transition: box-shadow 0.3s ease-in-out;
 }
-@media (max-width: 560px) {
+@media (max-width: 680px) {
   body main.interface-container .player---potting .player---pot--score {
     height: 20px;
     width: 20px;
@@ -452,7 +477,7 @@ body main.interface-container .player---potting .player---pot--score:hover {
 body main.interface-container .player---potting .player---pot--score .pot---tally {
   /* color: white; */
   text-align: center;
-  font-size: 13px;
+  /* font-size: 13px; */
   position: relative;
   top: 7px;
 }
