--- a/assets/sass/_main.scss
+++ b/assets/sass/_main.scss
@@ -133,7 +133,7 @@ body {
 
                             font-size: 5vw;
                     }   
-                    
+
                     @media (max-width: $breakpoint---sm) {
 
                             font-size: 5.6vw;
@@ -243,13 +243,13 @@ body {
                     margin: 10px 5px;
                     display: inline-block;
                     transition: box-shadow 0.3s ease-in-out;
-                    cursor: pointer;
+                    cursor: pointer;                   
 
-                    @media (max-width: $breakpoint---sm) {
+                    @media (max-width: $breakpoint---md) {
 
-                        width: 20px;
-                        height: 20px;
-                        margin: 4px;
+                        width: 24px;
+                        height: 24px;
+                        margin: 9px 4px;
                     }
 
                     &:hover {
@@ -269,10 +269,10 @@ body {
                         letter-spacing: 0px;
                         font-size: 15px;
 
-                        @media (max-width: $breakpoint---sm) {
+                        @media (max-width: $breakpoint---md) {
 
                             font-size: 12px;
-                            top: 4px;
+                            /* top: 4px; */
                         }
                     }
 
@@ -427,33 +427,26 @@ body {
                 /* right: 25px; */
                 text-align: right;
                 font-size: 20px;
-                vertical-align: top;    
-
-                @media (max-width: $breakpoint---m) {
-
-                    width: 100%;
-                    text-align: center;
-                }                
-
+                vertical-align: top; 
+               
                 @media (max-width: $breakpoint---md){
-
-                    font-size: 12px;
-                }                
-
-                @media (max-width: $breakpoint---m) {
-
-                    width: 100%;
-                    text-align: center;
-                }
+                    
+                }   
 
                 @media (max-width: $breakpoint---md){
 
                     display: inline-block;
-                    font-size: 12px;
-                    font-size: 12px;
                     /* padding: 0 31px; */
                     text-align: center;
                     margin: 0 auto;
+                }
+                
+                @media (max-width: $breakpoint---m) {
+
+                    width: 100%;
+                    text-align: center;
+                    font-size: 12px;
+                    margin: 10pt 0 8px 0px;
                 }
 
                 div { 
@@ -463,10 +456,15 @@ body {
                     @media (max-width: $breakpoint---md) {
 
                         display: inline-block;
-                        font-size: 12px;
+                        
                         padding: 0 31px;
                         text-align: center;
                         margin: 0 auto;
+                    }
+
+                    @media (max-width: $breakpoint---m) {
+
+                        font-size: 12px;
                     }
 
                     &.snookers---required {
