add selectors for final score values

--- a/assets/sass/_main.scss
+++ b/assets/sass/_main.scss
@@ -1228,6 +1228,16 @@ body {
             transform: scale(1.1) !important;
         }
     }
+
+
+    .frame-score-value-player1,
+    .frame-score-value-player2 {
+
+        color: red;
+        color: #e5ff61;
+    }
+    
+    
 }
 
 
